--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.503.0",
+    "motion": "^12.9.1",
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
