--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "debounce": "^2.2.0",
+    "framer-motion": "^12.9.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.1",
     "next": "^15.3.1",
@@ -30,6 +32,7 @@
     "@eslint/eslintrc": "^3",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4",
+    "@types/debounce": "^1.2.4",
     "@types/node": "^20.17.30",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
