--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "motion": "^12.9.1",
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-dropzone": "^14.3.8",
@@ -46,6 +47,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/debounce": "^1.2.4",
     "@types/node": "^20.17.30",
+    "@types/prop-types": "^15.7.14",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "autoprefixer": "^10.4.21",
